--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Title</title>
 </head>
 <body>
-<h1> Web Development</h1>
-
+<h1>Web Development I</h1>
+<ul>
+    <li>
+        <h2>Labo 2</h2>
+        <ol>
+            <li><a href="Labo_2/Opdracht_1.html">Opdracht 1</a></li>
+            <li><a href="Labo_2/Opdracht_2.html">Opdracht 2</a></li>
+            <li><a href="Labo_2/Opdracht_3.html">Opdracht 3</a></li>
+            <li><a href="Labo_2/Opdracht_4.html">Opdracht 4</a></li>
+            <li><a href="Labo_2/Opdracht_5.html">Opdracht 5</a></li>
+            <li><a href="Labo_2/Opdracht_6.html">Opdracht 6</a></li>
+            <li><a href="Labo_2/Opdracht_7.html">Opdracht 7</a></li>
+            <li><a href="Labo_2/Opdracht_8.html">Opdracht 8</a></li>
+            <li><a href="Labo_2/voorbeeld%20headings.HTML">Opdracht 9</a></li>
+            <li><a href="Labo_2/Opdracht_10.html">Opdracht 10</a></li>
+            <li><a href="Labo_2/Opdracht_11.html">Opdracht 11</a></li>
+            <li><a href="Labo_2/Opdracht_12.html">Opdracht 12</a></li>
+            <li><a href="Labo_2/Opdracht_13.html">Opdracht 13</a></li>
+        </ol>
+    </li>
+</ul>
 </body>
 </html>
