--- a/Labo_2/voorbeeld_headings.html
+++ b/Labo_2/voorbeeld_headings.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Opdracht 9</title>
 </head>
 <body>
-<html><head>
+<head>
     <meta charset="utf-8">
     <title>Browser default heading styles</title>
 </head>
@@ -17,9 +16,5 @@
 <h5>Heading 5 (h5)</h5>
 <h6>Heading 6 (h6)</h6>
 
-<!-- Link back to HTML Dog: -->
-<img src="http://www.htmldog.com/badge1.gif" alt="HTML Dog"></a></p>
-
-</body></html>
+<img src="images/dog.jpg" alt="HTML Dog"></a></p>
 </body>
-</html>
