--- a/Labo_2/voorbeeld_headings.html
+++ b/Labo_2/voorbeeld_headings.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Opdracht 9</title>
 </head>
 <body>
-<head>
+<html><head>
     <meta charset="utf-8">
     <title>Browser default heading styles</title>
 </head>
@@ -16,5 +17,9 @@
 <h5>Heading 5 (h5)</h5>
 <h6>Heading 6 (h6)</h6>
 
-<img src="images/dog.jpg" alt="HTML Dog"></a></p>
+<!-- Link back to HTML Dog: -->
+<img src="http://www.htmldog.com/badge1.gif" alt="HTML Dog"></a></p>
+
+</body></html>
 </body>
+</html>
