--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="Labo_2/Opdracht_6.html">Opdracht 6</a></li>
             <li><a href="Labo_2/Opdracht_7.html">Opdracht 7</a></li>
             <li><a href="Labo_2/Opdracht_8.html">Opdracht 8</a></li>
-            <li><a href="Labo_2/voorbeeld_headings.html">Opdracht 9</a></li>
+            <li><a href="Labo_2/voorbeeld_headings.HTML">Opdracht 9</a></li>
             <li><a href="Labo_2/Opdracht_10.html">Opdracht 10</a></li>
             <li><a href="Labo_2/Opdracht_11.html">Opdracht 11</a></li>
             <li><a href="Labo_2/Opdracht_12.html">Opdracht 12</a></li>
