--- a/Labo_2/inhoud.html
+++ b/Labo_2/inhoud.html
@@ -15,7 +15,7 @@
     <li><a href="Opdracht_6.html">Opdracht 6</a></li> <br>
     <li><a href="Opdracht_7.html">Opdracht 7</a></li> <br>
     <li><a href="Opdracht_8.html">Opdracht 8</a></li> <br>
-    <li><a href="voorbeeld_headings.html">Opdracht 9</a></li> <br>
+    <li><a href="/webdevelopment/Labo_2/voorbeeld_headings.HTML">Opdracht 9</a></li> <br>
     <li><a href="Opdracht_10.html">Opdracht 10</a></li> <br>
     <li><a href="Opdracht_11.html">Opdracht 11</a></li>
 </ul>
