--- a/Labo_2/voorbeeld_headings.HTML
+++ b/Labo_2/voorbeeld_headings.HTML
@@ -18,7 +18,7 @@
 <h6>Heading 6 (h6)</h6>
 
 <!-- Link back to HTML Dog: -->
-<img src="http://www.htmldog.com/badge1.gif" alt="HTML Dog"></a></p>
+<a href="http://www.htmldog.com/examples/"><img src="/webdevelopment/Labo_2/images/dog.jpg" alt="HTML Dog"></a></p>
 
 </body></html>
 </body>
