--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 <ul>
 
 
-    <li><a href="Labo_3/Homepage_Aymen.Kamar.html">Persoonlijke_Homepage-Aymen Kamar</a></li> <br>
-    <li><a href="Labo_3/Contact%20informatie.html">tabel_opdracht</a></li> <br>
-    <li><a href="Labo_3/Opleidingsaanbod.html">Opleidingen-Aymen kamar</a></li> <br>
+    <li><a href="Labo_3/Homepage_Aymen.Kamar.html">Persoonlijke_Homepage-Aymen Kamar </a></li> <br>
+    <li><a href="Labo_3/Contact%20informatie.html">Tabel_opdracht</a></li> <br>
+    <li><a href="Labo_3/Opleidingsaanbod.html">Opleidingen-Aymen Kamar </a></li> <br>
 
 </ul>
 </body>
-
 </html>
