--- a/Labo_3/Contact informatie.html
+++ b/Labo_3/Contact informatie.html
@@ -1,5 +1,32 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contactinformatie - VIVES Campussen</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            margin-top: 15px;
+        }
+        th, td {
+            border: 2px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        h2 {
+            font-family: Arial, sans-serif;
+        }
+    </style>
+</head>
+<body>
 <h2>Hoe kan je ons bereiken?</h2>
-<table border="2">
+
+<table>
     <tr>
         <th>Campus</th>
         <th>Studiegebieden</th>
@@ -54,3 +81,5 @@
         <td><a href="#">OND</a></td>
     </tr>
 </table>
+</body>
+</html>
