--- a/Labo_3/Opleidingsaanbod.html
+++ b/Labo_3/Opleidingsaanbod.html
@@ -64,7 +64,7 @@
 </main>
 
 <footer>
-    <p>&copy; 2025 Aymen Kamar – <a href=aymenkamar33@gmail.com">Contact</a></p>
+    <p>&copy; 2025 Aymen Kamar – <a href="mailto:aymenkamar33@gmail.com">Contact</a></p>
 </footer>
 
 </body>
