--- a/Labo_3/Homepage_Aymen.Kamar.html
+++ b/Labo_3/Homepage_Aymen.Kamar.html
@@ -3,40 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Persoonlijke Homepagina - Aymen Kamar </title>
+    <title>Persoonlijke Homepagina - Aymen Kamar</title>
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        table, th, td {
+            border: 1px solid black;
+            padding: 5px;
+        }
+    </style>
 </head>
 <body>
 <header>
-    <h1> Aymen </h1>
+    <h1>Aymen</h1>
     <h2>Welkom op mijn persoonlijke homepage</h2>
 </header>
 
 <section>
     <h3>Persoonlijke Informatie</h3>
-    <p><strong>Naam:</strong> Aymen Kamar </p>
+    <p><strong>Naam:</strong> Aymen Kamar</p>
     <p><strong>Leeftijd:</strong> 19 jaar</p>
     <p><strong>Adres:</strong> Scheldekouter 230</p>
-    <p><strong>Telefoonnummer:</strong> +32 470 53 61 40 </p>
-    <p></p> aymenkamar33@gmail.com
+    <p><strong>Telefoonnummer:</strong> +32 470 53 61 40</p>
+    <p><strong>Email:</strong> aymenkamar33@gmail.com</p>
 </section>
-<img src="persoonlijke%20foto/foto.aymen.webp">
-<section>
-    <h3>Hobby's</h3>
-    <ul>
-        <li>
-            <strong>Sporten in de sportschool:</strong> Actief blijven en kracht opbouwen door regelmatig te trainen.
-            <a href="https://www.basic-fit.com/nl-nl" target="_blank">Bezoek Basic-Fit</a>
-        </li>
-        <li>
-            <strong>Voetballen:</strong> genieten van voetballen met vrienden
-            <a href="https://www.knvb.nl/" target="_blank">Bezoek KNVB</a>
-        </li>
-        <li>
-            <strong>Gamen:</strong> Vooral het spelen van <em>FC 26</em> en andere games.
-            <a href="https://www.ea.com/nl/games/ea-sports-fc/fc-26" target="_blank">Bezoek EA Sports FC 26</a>
-        </li>
-    </ul>
-</section>
+
+<img src="persoonlijke%20foto/foto.aymen.webp" alt="Foto van Aymen Kamar">
+
 <section>
     <h3>Hobby's</h3>
     <ul>
@@ -61,16 +56,16 @@
         <li>
             <strong>Favoriete film:</strong> <em>The Lord of the Rings</em>
             <a href="https://www.imdb.com/title/tt0120737/" target="_blank">Bezoek de website</a>
+        </li>
     </ul>
-    <img src="persoonlijke%20foto/lord%20of%20the%20rings.webp">
-    </li>
+    <img src="persoonlijke%20foto/lord%20of%20the%20rings.webp" alt="Poster van The Lord of the Rings">
 </section>
 
 <section id="prognose">
     <h2>Prognose van mijn scores en een medestudent</h2>
     <p>Hier is een voorspelling van mijn scores (op 100) voor enkele vakken uit de opleiding, samen met de scores van een medestudent.</p>
 
-    <table border="1" cellpadding="5">
+    <table>
         <thead>
         <tr>
             <th>Vak</th>
@@ -79,46 +74,17 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>English</td>
-            <td>85</td>
-            <td>88</td>
-        </tr>
-        <tr>
-            <td>Problem Solving Fundamentals of Programming</td>
-            <td>55</td>
-            <td>70</td>
-        </tr>
-        <tr>
-            <td>Web Development</td>
-            <td>60</td>
-            <td>75</td>
-        </tr>
-        <tr>
-            <td>Computer Systems</td>
-            <td>78</td>
-            <td>82</td>
-        </tr>
-        <tr>
-            <td>Computer Networking</td>
-            <td>70</td>
-            <td>74</td>
-        </tr>
-        <tr>
-            <td>Databases</td>
-            <td>82</td>
-            <td>85</td>
-        </tr>
-        <tr>
-            <td>Excel</td>
-            <td>90</td>
-            <td>92</td>
-        </tr>
-        <tr>
-            <td>Systems Management</td>
-            <td>80</td>
-            <td>83</td>
-        </tr>
+        <tr><td>English</td><td>85</td><td>88</td></tr>
+        <tr><td>Problem Solving Fundamentals of Programming</td><td>55</td><td>70</td></tr>
+        <tr><td>Web Development</td><td>60</td><td>75</td></tr>
+        <tr><td>Computer Systems</td><td>78</td><td>82</td></tr>
+        <tr><td>Computer Networking</td><td>70</td><td>74</td></tr>
+        <tr><td>Databases</td><td>82</td><td>85</td></tr>
+        <tr><td>Excel</td><td>90</td><td>92</td></tr>
+        <tr><td>Systems Management</td><td>80</td><td>83</td></tr>
         </tbody>
     </table>
 </section>
+
+</body>
+</html>
